clip table more readable, fix heading

--- a/capstone_website/css/custom.css
+++ b/capstone_website/css/custom.css
@@ -122,3 +122,17 @@ ul {
     font-size: 24px;
     font-weight: bold;
 }
+.cliptable tbody tr td:first-child
+{
+    font-size: 24px;
+    font-weight: bold;
+    font-style: italic;
+    text-align: right;
+}
+.cliptable tbody tr td:nth-child(3)
+{
+    font-family: Courier;
+    font-style: bold;
+    text-align: left;
+}
+
